﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.127.exe
  6 августа 2025 13:40

  [+] Добавлена программная установка параметров для EurekaLog
	  
*******************************************************************

  OposWebKassa_0.126.exe
  1 августа 2025 18:10

  [+] Добавлена команда DirectIO DIO_DO_OUTOFMEMORY = 109;
      для генерации ошибки EOutOfMemory
  
*******************************************************************

  OposWebKassa_0.125.exe
  1 августа 2025 12:10
  
  [-] Включена запись в лог EurekaLog обработанных исключений
  
*******************************************************************

  OposWebKassa_0.124.exe
  25 июля 2025 16:10
  
  [-] Включена запись в лог EurekaLog обработанных исключений
  
*******************************************************************

  OposWebKassa_0.123.exe
  22 июля 2025 19:30
  
  [-] Исправлена ошибка "Out of memory"
  [-] Исправлена ошибка печати чека
  
*******************************************************************

  OposWebKassa_0.121.exe
  17 июля 2025 15:35
  
  [-] Собран с EurekaLog
  
*******************************************************************

  OposWebKassa_0.120.exe
  2 июля 2025 14:35
  
  [-] Изменен размер текста ДУБЛИКАТ в начале копии чека
  
*******************************************************************

  OposWebKassa_0.119.exe
  20 июня 2025 19:15
  
  [-] Изменен текст ДУБЛИКАТ в начале копии чека
  
*******************************************************************

  OposWebKassa_0.117.exe
  17 июня 2025 15:00
  
  [-] Исключена проверка библиотек SSL

*******************************************************************

  OposWebKassa_0.116.exe
  10 июня 2025 12:00
  
  [-] Исправлена запись в лог стека при исключениях