@@ -1,21 +1,52 @@
 [Closed Files]
-File_0=SourceModule,'D:\IBTS\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas',0,1,1465,29,1470,0,0
-File_1=SourceModule,'D:\IBTS\WebKassa\src\OposWebkassa\units\DirectIOAPI.pas',0,1,110,1,129,0,0
-File_2=SourceModule,'D:\IBTS\WebKassa\src\OposTest\Fmu\fmuFptrDirectIO.pas',0,1,1,18,17,1,0
-File_3=SourceModule,'D:\IBTS\WebKassa\src\OposTest\Fmu\fmuFiscalPrinter.pas',0,1,1,41,9,1,0
-File_4=SourceModule,'D:\IBTS\WebKassa\src\OposTest\Fmu\fmuFptrDirectIOHex.pas',0,1,19,37,20,1,1
-File_5=SourceModule,'D:\IBTS\WebKassa\src\OposTest\Fmu\fmuFptrEvents.pas',0,1,1,1,1,1,1
-File_6=SourceModule,'D:\IBTS\WebKassa\src\OposTest\Units\DIODescription.pas',0,1,2,27,12,0,0
-File_7=SourceModule,'D:\IBTS\WebKassa\test\OposWebkassaTest\units\duLogFile.pas',0,1,94,1,115,0,0
-File_8=SourceModule,'D:\IBTS\WebKassa\src\Shared\ReceiptTemplate.pas',0,1,136,20,149,0,0
-File_9=SourceModule,'D:\IBTS\WebKassa\src\Shared\PrinterParameters.pas',0,1,800,22,811,0,0
+File_0=SourceModule,'D:\IBTS\WebKassa\src\OposWebkassa\units\WebkassaImpl.pas',0,1,577,8,587,0,0
+File_1=SourceModule,'D:\IBTS\WebKassa\test\OposWebkassaTest\units\duMemory.pas',0,1,6,7,72,0,0
+File_2=SourceModule,'D:\IBTS\WebKassa\test\OposWebkassaTest\units\duLogFile.pas',0,1,26,22,38,0,0
+File_3=SourceModule,'C:\Program Files (x86)\EurekaLab\EurekaLog 6\Delphi7\ExceptionLog.pas',0,1,16424,25,16443,0,0
+File_4=SourceModule,'D:\IBTS\WebKassa\src\Shared\DriverError.pas',0,1,24,52,37,0,0
+File_5=SourceModule,'C:\Program Files (x86)\EurekaLab\EurekaLog 6\Delphi7\ECore.pas',0,1,2179,18,2195,0,0
+File_6=SourceModule,'C:\Program Files (x86)\EurekaLab\EurekaLog 6\Delphi7\ETypes.pas',0,1,106,1,106,0,0
+File_7=SourceModule,'D:\IBTS\WebKassa\test\OposWebkassaTest\units\duTextDocument.pas',0,1,1,7,9,0,0
+File_8=SourceModule,'c:\program files (x86)\borland\delphi7\Comp\dunit\src\TestFramework.pas',0,1,2032,1,2045,0,0
 
 [Modules]
-Count=0
-EditWindowCount=0
+Module0=c:\program files (x86)\borland\delphi7\source\rtl\Sys\sysutils.pas
+Module1=D:\IBTS\WebKassa\src\Shared\JsonUtils.pas
+Module2=c:\program files (x86)\borland\delphi7\Comp\TntUnicodeControls_2.3.0\Source\TntSysUtils.pas
+Module3=D:\IBTS\WebKassa\src\Opos\OposDevice.pas
+Module4=D:\IBTS\WebKassa\src\Shared\EscPrinterXPrinter.pas
+Module5=D:\IBTS\WebKassa\src\OposWebkassa\units\WebkassaClient.pas
+Count=6
+EditWindowCount=1
 TypeLibWindowCount=1
 
-[D:\IBTS\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
+[c:\program files (x86)\borland\delphi7\source\rtl\Sys\sysutils.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[D:\IBTS\WebKassa\src\Shared\JsonUtils.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[c:\program files (x86)\borland\delphi7\Comp\TntUnicodeControls_2.3.0\Source\TntSysUtils.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[D:\IBTS\WebKassa\src\Opos\OposDevice.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[D:\IBTS\WebKassa\src\Shared\EscPrinterXPrinter.pas]
+ModuleType=SourceModule
+FormState=0
+FormOnTop=0
+
+[D:\IBTS\WebKassa\src\OposWebkassa\units\WebkassaClient.pas]
+ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
@@ -50,6 +81,84 @@ FormOnTop=0
 [D:\IBTS\WebKassa\test\OposWebkassaTest\OposWebkassaTestLib.dpr]
 FormState=0
 FormOnTop=0
+
+[D:\IBTS\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
+FormState=0
+FormOnTop=0
+
+[EditWindow0]
+ViewCount=6
+CurrentView=2
+View0=0
+View1=1
+View2=2
+View3=3
+View4=4
+View5=5
+CodeExplorer=CodeExplorer@EditWindow0
+MessageView=MessageView@EditWindow0
+Create=1
+Visible=1
+State=2
+Left=493
+Top=140
+Width=1302
+Height=682
+MaxLeft=-8
+MaxTop=107
+MaxWidth=1932
+MaxHeight=941
+ClientWidth=1916
+ClientHeight=902
+LeftPanelSize=0
+LeftPanelClients=CodeExplorer@EditWindow0
+LeftPanelData=00000400010000000C000000436F64654578706C6F7265720000000000000000000000000000000000FFFFFFFF
+RightPanelSize=0
+BottomPanelSize=206
+BottomPanelClients=MessageView@EditWindow0
+BottomPanelData=000004000000000000000000000000000000000000000000000100000000000000000B0000004D65737361676556696577FFFFFFFF
+
+[View0]
+Module=D:\IBTS\WebKassa\src\OposWebkassa\units\WebkassaClient.pas
+CursorX=39
+CursorY=1788
+TopLine=1782
+LeftCol=1
+
+[View1]
+Module=D:\IBTS\WebKassa\src\Shared\EscPrinterXPrinter.pas
+CursorX=20
+CursorY=740
+TopLine=735
+LeftCol=1
+
+[View2]
+Module=c:\program files (x86)\borland\delphi7\source\rtl\Sys\sysutils.pas
+CursorX=49
+CursorY=7573
+TopLine=7559
+LeftCol=1
+
+[View3]
+Module=D:\IBTS\WebKassa\src\Opos\OposDevice.pas
+CursorX=30
+CursorY=321
+TopLine=317
+LeftCol=1
+
+[View4]
+Module=c:\program files (x86)\borland\delphi7\Comp\TntUnicodeControls_2.3.0\Source\TntSysUtils.pas
+CursorX=2
+CursorY=439
+TopLine=425
+LeftCol=1
+
+[View5]
+Module=D:\IBTS\WebKassa\src\Shared\JsonUtils.pas
+CursorX=1
+CursorY=163
+TopLine=145
+LeftCol=1
 
 [TypeLibEditWindow0]
 Create=1
@@ -96,15 +205,15 @@ Count=0
 Create=1
 Visible=1
 State=2
-Left=-8
+Left=0
 Top=0
-Width=1349
+Width=1920
 Height=123
 MaxLeft=-1
 MaxTop=-1
-MaxWidth=1936
+MaxWidth=1932
 MaxHeight=123
-ClientWidth=1920
+ClientWidth=1916
 ClientHeight=84
 
 [ProjectManager]
@@ -356,6 +465,38 @@ TBDockHeight=151
 LRDockWidth=383
 Dockable=1
 
+[CodeExplorer@EditWindow0]
+Create=1
+Visible=0
+State=0
+Left=-297
+Top=-9
+Width=140
+Height=305
+MaxLeft=-1
+MaxTop=-1
+ClientWidth=140
+ClientHeight=305
+TBDockHeight=305
+LRDockWidth=140
+Dockable=1
+
+[MessageView@EditWindow0]
+Create=1
+Visible=1
+State=0
+Left=12
+Top=0
+Width=1892
+Height=206
+MaxLeft=-1
+MaxTop=-1
+ClientWidth=1892
+ClientHeight=206
+TBDockHeight=206
+LRDockWidth=443
+Dockable=1
+
 [DockHosts]
 DockHostCount=1
 
@@ -379,5 +520,5 @@ DockClients=CallStackWindow
 DockSiteData=0000040000000000F001000000000000015803000000000000010000000087000000000000000100000002F0010000000000000200000000580300000F00000043616C6C537461636B57696E646F770200000000F7010000000000000100000000080100000000000001000000008C010000000000000100000000100200000000000001000000009802000000000000FFFFFFFF
 
 [ActiveProject]
-ActiveProject=3
+ActiveProject=4
 
