@@ -24,6 +24,7 @@
 -$X+
 -$YD
 -$Z1
+-GD
 -cg
 -vn
 -AWinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;
@@ -36,6 +37,7 @@
 -N"DCU"
 -LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
+-DEUREKALOG;EUREKALOG_VER6
 -w-SYMBOL_DEPRECATED
 -w-SYMBOL_PLATFORM
 -w-UNIT_PLATFORM
