@@ -2,6 +2,7 @@ Library OposWebkassaTestLib;
 
 uses
   FastMM4,
+  ExceptionLog,
   SysUtils,
   TestFramework,
   GUITestRunner,
