@@ -55,8 +55,8 @@ CheckSSLLibrary=1
 
 [GUITestRunner Config]
 AutoSave=1
-Left=363
-Top=130
+Left=96
+Top=54
 Width=1573
 Height=1003
 Maximized=0
