@@ -6,6 +6,13 @@
 
 *******************************************************************
 
+  OposWebKassa_0.128.exe
+  13 августа 2025 16:30
+
+  [+] Изменена программная установка параметров для EurekaLog
+  
+*******************************************************************
+
   OposWebKassa_0.127.exe
   6 августа 2025 13:40
 
